<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:src="@drawable/goldie">

        </ImageView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight=".6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/selectorder"
            android:gravity="center"
            android:textSize="30dp"
            android:background="#ffcf00"
            android:textColor="#000"

            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/square"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_crop_square_black_24dp" />

            <ImageView
                android:id="@+id/circle"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_toRightOf="@+id/square"
                android:src="@drawable/ic_brightness_1_black_24dp" />


            <ImageView
                android:id="@+id/rectangle"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_toRightOf="@+id/triangle"
                android:src="@drawable/ic_crop_landscape_black_24dp"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radiotoppingsGroup"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1"
                    android:id="@+id/rbtn_square"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_weight="1"
                    android:id="@+id/rbtn_circle"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_weight="1"
                    android:id="@+id/rbtn_rectangle"/>

            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="0dp"
            android:layout_weight=".6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/selectflavor"
                android:gravity="center"
                android:textSize="30dp"
                android:background="#ffcf00"
                android:textColor="#000"

                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Spinner
                android:id="@+id/spinner_flavor"
                android:layout_width="match_parent"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:layout_height="50dp"
                />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="0dp"
        android:layout_weight=".6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/selecttoppings"
            android:gravity="center"
            android:textSize="30dp"
            android:background="#ffcf00"
            android:textColor="#000"

            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Spinner
            android:id="@+id/spinner_toppings"
            android:layout_width="match_parent"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_height="50dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/txt_message"
            android:hint="@string/hint_txt"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="0dp"
        android:layout_weight=".6">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txt_submit"
            android:onClick="submit"
            android:id="@+id/btn_submit"/>

    </RelativeLayout>

</LinearLayout>
